# Whatsapp-Number-Filter-v2

./: LICENSE  README.md  config-headless-example.yaml  config-visible-example.yaml  pyproject.toml  run_onedriver_threads.bat  run_onedriver_threads.sh  run_single.bat  run_single.sh  run_threaded_headless.bat  run_threaded_headless.sh  run_threaded_headless_custom.bat  run_threaded_headless_custom.sh  run_unix.sh  run_windows.bat  setup_unix.sh  setup_windows.bat
whatsapp_filter/: __init__.py  __main__.py  cli.py  config.py  drivers.py  io_utils.py  logger.py  modes.py  whatsapp.py
