[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-filter"
version = "2.0.1"
description = "Filter WhatsApp-registered numbers using WhatsApp Web automation."
authors = [
    { name = "xorro", email = "xcoder@post.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "pyyaml>=6.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/x-o-r-r-o/"
Source = "https://github.com/x-o-r-r-o/Whatsapp-Number-Filter-v2"

[project.scripts]
whatsapp-filter = "whatsapp_filter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

include = ["whatsapp_filter"]

